--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Downloading Notification</string>
     <string name="aap_name_update">Update File</string>
-    <string name="download">DOWNLOAD</string>
-    <string name="update">UPDATE</string>
+    <string name="download">Download</string>
+    <string name="update">Update</string>
 </resources>
